[package]
name = "cargo-openvm"
description = "OpenVM CLI tools"
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
    "build",
    "git",
    "git2",
] }

[dependencies]
openvm-build = { workspace = true }
openvm-transpiler = { workspace = true }
openvm-native-recursion = { workspace = true, features = ["static-verifier"] }
openvm-sdk = { workspace = true }
openvm-stark-sdk.workspace = true
openvm-stark-backend.workspace = true

aws-sdk-s3 = "1.78"
aws-config = "1.5"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.9", features = ["derive", "env"] }
eyre.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
hex = "0.4.3"
target-lexicon = "0.12.15"
tempfile = "3.10.1"
toml = { workspace = true }
bitcode.workspace = true

[features]
default = []
bench-metrics = ["openvm-sdk/bench-metrics"]
