[package]
name = "openvm-prof"
description = "OpenVM profiling tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
eyre.workspace = true
itertools = { workspace = true, features = ["use_std"] }
num-format = "0.4"
memmap2 = "0.9"
