[package]
name = "openvm-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
p3-fri = { workspace = true }
openvm-algebra-circuit = { workspace = true }
openvm-algebra-transpiler = { workspace = true }
openvm-bigint-circuit = { workspace = true }
openvm-bigint-transpiler = { workspace = true }
openvm-build = { workspace = true }
openvm-ecc-circuit = { workspace = true }
openvm-ecc-transpiler = { workspace = true }
openvm-keccak256-circuit = { workspace = true }
openvm-keccak256-transpiler = { workspace = true }
openvm-sha256-circuit = { workspace = true }
openvm-sha256-transpiler = { workspace = true }
openvm-pairing-circuit = { workspace = true }
openvm-pairing-transpiler = { workspace = true }
openvm-native-circuit = { workspace = true }
openvm-native-compiler = { workspace = true }
openvm-native-recursion = { workspace = true }
openvm-native-transpiler = { workspace = true }
openvm-rv32im-circuit = { workspace = true }
openvm-rv32im-transpiler = { workspace = true }
openvm-transpiler = { workspace = true }
openvm-stark-backend = { workspace = true }
openvm-stark-sdk = { workspace = true }
openvm-circuit = { workspace = true }
openvm-continuations = { workspace = true }
openvm = { workspace = true }

alloy-sol-types = { workspace = true, optional = true, features = ["json"] }
bitcode = { workspace = true }
bon = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
eyre.workspace = true
async-trait.workspace = true
metrics.workspace = true
tracing.workspace = true
itertools.workspace = true
getset.workspace = true
clap = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["hex"] }
serde_json.workspace = true
thiserror.workspace = true
snark-verifier = { workspace = true, optional = true }
snark-verifier-sdk = { workspace = true, optional = true }
tempfile.workspace = true
hex.workspace = true
forge-fmt = { workspace = true, optional = true }
rrs-lib = { workspace = true }
num-bigint = { workspace = true }

[features]
default = ["parallel", "jemalloc"]
evm-prove = [
    "openvm-continuations/static-verifier",
    "openvm-native-recursion/evm-prove",
    "dep:snark-verifier",
    "dep:snark-verifier-sdk",
]
evm-verify = [
    "evm-prove",
    "openvm-native-recursion/evm-verify",
    "dep:alloy-sol-types",
    "dep:forge-fmt",
]
bench-metrics = [
    "openvm-circuit/bench-metrics",
    "openvm-native-recursion/bench-metrics",
    "openvm-native-compiler/bench-metrics",
]
# for guest profiling:
profiling = ["openvm-circuit/function-span", "openvm-transpiler/function-span"]
test-utils = ["openvm-circuit/test-utils"]
# performance features:
# (rayon is always imported because of halo2, so "parallel" feature is redundant)
parallel = ["openvm-circuit/parallel"]
mimalloc = ["openvm-circuit/mimalloc"]
jemalloc = ["openvm-circuit/jemalloc"]
jemalloc-prof = ["openvm-circuit/jemalloc-prof"]
nightly-features = ["openvm-circuit/nightly-features"]

[[example]]
name = "sdk_evm"
path = "examples/sdk_evm.rs"
required-features = ["evm-verify"]
